--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.24.1",
     "recharts": "^2.13.0-alpha.4",
     "tailwind-merge": "^2.4.0",
